--- a/widgets/phenogrid/css/stickytooltip.css
+++ b/widgets/phenogrid/css/stickytooltip.css
@@ -19,9 +19,3 @@
 	text-align:center;
 	font:bold 11px Arial;
 }
-
-ul.a {
-	list-style-type: square;
-  	padding: 0px;
-    margin: 12px;	
-}
